Add base layout (#2)
* feat: add tailwind

* feat: add i18n

* feat: add class-variance-authority

* feat: add button

* feat: replace phosphor-icons for iconify

* feat: theme container, icons, colors

* feat: replace iconify for unplugin-icons

* fix: navbar

* feat: add headlessui

* feat: add home page

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: 'Montserrat', sans-serif;
+    height: 100%;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  html,
+  body,
+  #theme-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  body,
+  #theme-container {
+    flex-grow: 1;
+  }
+}
+
 * {
   scrollbar-width: thin;
   scrollbar-color: hsl(var(--p)) hsl(var(--b3));
